# alexa-auto-sdk

./: .gitignore  prepareUbuntu.sh  uploadAllMaven.sh
extensions/: README.md  setup.sh
extensions/extras/co-assistant/modules/co-assistant/engine/: CMakeLists.txt
extensions/extras/co-assistant/modules/co-assistant/engine/include/AACE/Engine/CoAssistant/: CoAssistantActiveAgentDelegateInterface.h  CoAssistantCustomDirectiveCapabilityAgent.h  CoAssistantEngineImpl.h  CoAssistantEngineService.h
extensions/extras/co-assistant/modules/co-assistant/engine/src/: CoAssistantCustomDirectiveCapabilityAgent.cpp  CoAssistantEngineImpl.cpp  CoAssistantEngineService.cpp
extensions/extras/co-assistant/modules/co-assistant/platform/: CMakeLists.txt
extensions/extras/co-assistant/modules/co-assistant/platform/include/AACE/CoAssistant/: CoAssistant.h
extensions/extras/co-assistant/modules/co-assistant/platform/src/: CoAssistant.cpp
extensions/extras/local-voice-control/extensions/aasb-lvc/engine/: CMakeLists.txt
extensions/extras/local-voice-control/extensions/aasb-lvc/engine/include/AASB/Engine/LocalNavigation/: AASBLocalNavigationEngineService.h  AASBLocalSearchProvider.h
extensions/extras/local-voice-control/extensions/aasb-lvc/engine/include/AASB/Message/LocalNavigation/LocalSearchProvider/: PoiLookupRequestMessage.h  PoiLookupResponseMessage.h  PoiSearchRequestMessage.h  PoiSearchResponseMessage.h
extensions/extras/local-voice-control/extensions/aasb-lvc/engine/src/: AASBLocalNavigationEngineService.cpp  AASBLocalSearchProvider.cpp
extensions/extras/local-voice-control/modules/address-book-local-service/engine/: CMakeLists.txt
extensions/extras/local-voice-control/modules/address-book-local-service/engine/include/AACE/Engine/AddressBookLocalService/: AddressBookLocalImpl.h  AddressBookLocalService.h
extensions/extras/local-voice-control/modules/address-book-local-service/engine/src/: AddressBookLocalImpl.cpp  AddressBookLocalService.cpp
extensions/extras/local-voice-control/modules/address-book-local-service/engine/test/: AddressBookLocalImplTest.cpp  CMakeLists.txt
extensions/extras/local-voice-control/modules/car-control-local-service/engine/: CMakeLists.txt
extensions/extras/local-voice-control/modules/car-control-local-service/engine/include/AACE/Engine/CarControlLocalService/: CarControlLocalService.h  Endpoint.h  JSONUtils.h
extensions/extras/local-voice-control/modules/car-control-local-service/engine/src/: CarControlLocalService.cpp  Endpoint.cpp  JSONUtils.cpp
extensions/extras/local-voice-control/modules/car-control-local-service/engine/src/Capabilities/: CapabilityInterface.cpp  ModeController.cpp  PowerController.cpp  PrimitiveController.cpp  RangeController.cpp  ToggleController.cpp
extensions/extras/local-voice-control/modules/local-navigation/engine/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-navigation/engine/include/AACE/Engine/LocalNavigation/: LocalNavigationEngineService.h  LocalSearchProviderEngineImpl.h
extensions/extras/local-voice-control/modules/local-navigation/engine/src/: LocalNavigationConfigurationImpl.cpp  LocalNavigationEngineService.cpp  LocalSearchProviderEngineImpl.cpp
extensions/extras/local-voice-control/modules/local-navigation/platform/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-navigation/platform/include/AACE/LocalNavigation/: LocalNavigationConfiguration.h  LocalSearchProvider.h  LocalSearchProviderEngineInterface.h
extensions/extras/local-voice-control/modules/local-navigation/platform/src/: LocalSearchProvider.cpp
extensions/extras/local-voice-control/modules/local-skill-service/engine/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-skill-service/engine/include/AACE/Engine/LocalSkillService/: HTTP.h  LocalSkillServiceEngineService.h  LocalSkillServiceInterface.h
extensions/extras/local-voice-control/modules/local-skill-service/engine/src/: HTTP.cpp  LocalSkillServiceEngineService.cpp
extensions/extras/local-voice-control/modules/local-skill-service/engine/test/: CMakeLists.txt  HTTPTest.cpp  LocalSkillServiceEngineServiceTest.cpp
extensions/extras/local-voice-control/modules/local-skill-service/platform/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-skill-service/platform/include/AACE/LocalSkillService/: LocalSkillServiceConfiguration.h
extensions/extras/local-voice-control/modules/local-skill-service/platform/src/: LocalSkillService.cpp
extensions/extras/local-voice-control/modules/local-voice-control/: .gitignore  CMakeLists.txt  README.md  aac-module-local-voice-control.bb
extensions/extras/local-voice-control/modules/local-voice-control/configs/: config-local-voice-control.json
extensions/extras/local-voice-control/modules/local-voice-control/engine/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-voice-control/engine/include/AACE/Engine/LocalVoiceControl/: AuthImpl.h  ClockImpl.h  ConfigurationImpl.h  ConnectivityImpl.h  DummyAuthDelegate.h  EndpointImpl.h  LocalVoiceControlEngineService.h  LocaleImpl.h  MetricsEmitterImpl.h  PlatformServicesRunner.h
extensions/extras/local-voice-control/modules/local-voice-control/engine/src/: AuthImpl.cpp  ClockImpl.cpp  ConfigurationImpl.cpp  ConnectivityImpl.cpp  DummyAuthDelegate.cpp  EndpointImpl.cpp  LocalVoiceControlConfigurationImpl.cpp  LocalVoiceControlEngineService.cpp  LocaleImpl.cpp  MetricsEmitterImpl.cpp  PlatformServicesRunner.cpp
extensions/extras/local-voice-control/modules/local-voice-control/engine/src/DeviceAdapter/: ConnectivityImpl.cpp  DeviceAdapterImpl.cpp  DeviceCapabilitiesImpl.cpp  DeviceInfoImpl.cpp  DeviceSettingsImpl.cpp  LocaleImpl.cpp  TimeZoneImpl.cpp
extensions/extras/local-voice-control/modules/local-voice-control/platform/: CMakeLists.txt
extensions/extras/local-voice-control/modules/local-voice-control/platform/include/AACE/LocalVoiceControl/: LocalVoiceControlConfiguration.h
extensions/extras/local-voice-control/modules/local-voice-control/platform/src/: LocalVoiceControlService.cpp
(+184 files in other folders)
